# daily-core-sdk

./: .gitignore  CHANGELOG.md  CMakePresets.json  README.md
example/: .clang-format  CMakeLists.txt
example/src/: daily_example.cpp
examples/c++/: CMakeLists.txt  CMakePresets.json  README.md
examples/c++-custom-tracks/: CMakeLists.txt  README.md  aarch64-linux-toolchain.cmake  index.html
examples/c++-custom-tracks/cmake/: FindDailyCore.cmake
examples/c++-custom-tracks/include/: daily_example.h
examples/c++-custom-tracks/src/: daily_receiver.cpp  daily_sender.cpp
examples/c++/include/: daily_example.h
examples/c++/src/: daily_example.cpp
include/: daily_core.h
